[metadata]
name = PySpeedMacro
version = 0.0.0.4
author = William Keller
author_email = author@example.com
description = A fast and easy library for scripting and macroing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BaneofRogue/PySpeedMacro
project_urls = 
	Bug Tracker = https://github.com/BaneofRogue/PySpeedMacro/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requres = >=3.6

[options.packages.find]
where = src